[Version] versions of third-party libs were updated

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext {
+        minSdkVersion = 19
+        targetSdkVersion = 27
+        compileSdkVersion = 27
+        kotlin_version = '1.1.51'
+    }
+
     repositories {
         google()
         jcenter()
@@ -12,7 +18,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:3.1.1'
     }
 }
 
@@ -27,8 +33,37 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    minSdkVersion = 19
-    targetSdkVersion = 27
-    compileSdkVersion = 27
-}
+
+def versions = [
+        support            : '26.1.0',
+        constraint         : '1.0.2',
+        rxJava             : '2.0.9',
+        rxAndroid          : '2.0.1',
+        jUnit              : '4.12',
+        espresso           : '2.2.2',
+        robolectric        : '3.3.2',
+        mockito            : '2.10.0',
+        firebase           : '11.6.0',
+        lifecycle          : '1.0.0'
+]
+
+ext.libraries = [
+        supportDesign           : "com.android.support:design:${versions.support}",
+        supportCardView         : "com.android.support:cardview-v7:${versions.support}",
+        constraintLayout        : "com.android.support.constraint:constraint-layout:${versions.constraint}",
+        rxJava                  : "io.reactivex.rxjava2:rxjava:${versions.rxJava}",
+        rxAndroid               : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
+        rxRetrofitAdapter       : "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofit}",
+        firebaseDatabase        : "com.google.firebase:firebase-database:${versions.firebase}",
+        firestore               : "com.google.firebase:firebase-firestore:${versions.firebase}",
+        archLifecycle           : "android.arch.lifecycle:extensions:${versions.lifecycle}",
+        kotlinStd               : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+]
+
+ext.testDependencies = [
+        junit              : "junit:junit:${versions.jUnit}",
+        espresso           : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
+        robolectric        : "org.robolectric:robolectric:${versions.robolectric}",
+        robolectricMultidex: "org.robolectric:shadows-multidex:${versions.robolectric}",
+        mockito            : "org.mockito:mockito-core:${versions.mockito}",
+]
