--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,27 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    implementation 'com.google.firebase:firebase-database:11.6.0'
-    implementation "com.google.firebase:firebase-firestore:11.6.0"
+    implementation libraries.kotlinStd
+    implementation libraries.firebaseDatabase
+    implementation libraries.firestore
 
-    implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation libraries.archLifecycle
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //Support Libraries
+    implementation libraries.supportDesign
+    implementation libraries.supportCardView
+    implementation libraries.constraintLayout
+
+    //Rx
+    implementation libraries.rxJava
+    implementation libraries.rxAndroid
+
+    //Tests
+    testImplementation testDependencies.junit
+    testImplementation testDependencies.robolectric
+    testImplementation testDependencies.robolectricMultidex
+    testImplementation testDependencies.mockito
 }
-
 
 apply plugin: 'com.google.gms.google-services'
